<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movies.MoviesFragment"
    android:background="@color/primary"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvProximosEstrenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximos_estrenos"
       style="@style/TextTitleCategory"
        app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
     />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUpcomingMovies"
        android:paddingHorizontal="20dp"
        android:layout_marginStart="-10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvProximosEstrenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/tvTendencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tendencias"
        android:paddingTop="20dp"
        style="@style/TextTitleCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvUpcomingMovies"
      />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPopularMovies"
        android:paddingHorizontal="20dp"
        android:layout_marginStart="-10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvTendencias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
            android:id="@+id/tvRecomendados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recomendadas"
            android:paddingTop="20dp"
            style="@style/TextTitleCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvPopularMovies"
            />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnsFilter"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecomendados"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"

        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnES"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextBtnFilter"
            android:textColor="@color/primary"
            android:background="@drawable/btn_custom"
            android:text="@string/cine_español"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEN"
            android:layout_width="wrap_content"
            style="@style/TextBtnFilter"
            android:textColor="@color/accent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:text="@string/cine_internacional"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecommendationMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="290dp"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnsFilter"
        android:nestedScrollingEnabled="false"

        />
    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>